--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.enabled=true
 
 server.port=8081
-countries.url=http://localhost:8082/api/
+countries.url=http://aui-lab3-country-1:8082/api/
