--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -2,11 +2,11 @@ server {
     listen 80;
     server_name localhost;
     location / {
-        proxy_pass http://aui-javascript-1:8083;
+        proxy_pass http://frontend:8083;
     }
 
     location /api {
-        proxy_pass http://aui-lab3-gateway-1:8080;
+        proxy_pass http://gateway:8080;
         proxy_set_header  Host                  $host;
         proxy_set_header  X-Real-IP             $remote_addr;
         proxy_set_header  X-Forwarded-For       $proxy_add_x_forwarded_for;
