--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,56 +1,29 @@
 version: '3'
 
 services:
-  lab3-country:
+  country:
+    container_name: country
     build:
       context: ./lab3-country
-    networks:
-      mynet:
-        ipv4_address: 172.28.0.6
 
-  lab3-continent:
+  continent:
+    container_name: continent
     build:
       context: ./lab3-continent
-    depends_on:
-      - lab3-country
-    networks:
-      mynet:
-        ipv4_address: 172.28.0.5
 
-  lab3-gateway:
+  gateway:
+    container_name: gateway
     build:
       context: ./lab3-gateway
-    depends_on:
-      - lab3-country
-      - lab3-continent
-    networks:
-      mynet:
-        ipv4_address: 172.28.0.4
 
-  javascript:
+  frontend:
+    container_name: frontend
     build:
       context: ./frontend
-    depends_on:
-      - lab3-gateway
-    networks:
-      mynet:
-        ipv4_address: 172.28.0.3
 
   proxy:
+    container_name: proxy
     build:
       context: ./proxy
     ports:
       - 80:80
-    depends_on:
-      - javascript
-    networks:
-      mynet:
-        ipv4_address: 172.28.0.2
-    tty: true
-
-networks:
-  mynet:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 172.28.0.0/16
